shame/tests/buffer_constraints_fail/uniform_is_read.rs
fn main() { let _: shame::BufferV2<shame::f32x1, shame::mem::Uniform, shame::ReadWrite> = todo!(); }
